--- a/mind.html
+++ b/mind.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
         // 定义一个函数从接口获取数据
         async function fetchMindMapData() {
-            const response = await fetch('https://lanjie02.github.io/pages/api/mindmap?sub1=Custom1&sub2=Custom2&sub3=Custom3');
+            const response = await fetch('https://pages-ff2nwrc8z-lanjie02s-projects.vercel.app/pages/api/mindmap?sub1=Custom1&sub2=Custom2&sub3=Custom3');
             const data = await response.json();
             return data;
         }
